collect and clean profile and diff data

--- a/create snapshots.ipynb
+++ b/create snapshots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-09T21:52:35.007803Z",
@@ -25,33 +25,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/jovyan/host/dev/linux_ckl'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PROJECT_NAME = 'linux_ckl'\n",
+    "PROJECT_PATH = os.getcwd().rsplit(f'/{PROJECT_NAME}', 1)[0] + f'/{PROJECT_NAME}'\n",
+    "PROJECT_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LINUX_BASE = '/mnt/c/Users/mwhitmore/Desktop/Work/linux/'\n",
-    "LINUX_REPO_BASE = os.path.join(LINUX_BASE, 'repo')\n",
-    "SNAPSHOTS_BASE = os.path.join(LINUX_BASE, 'snapshots')\n",
+    "LINUX_REPO_BASE = os.path.join(PROJECT_PATH, 'repo')\n",
+    "SNAPSHOTS_BASE = os.path.join(PROJECT_PATH, 'snapshots')\n",
     "os.makedirs(SNAPSHOTS_BASE, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cloning into '/mnt/c/Users/mwhitmore/Desktop/Work/linux/repo'...\n",
-      "remote: Enumerating objects: 6402, done.\u001b[K\n",
-      "remote: Counting objects: 100% (6402/6402), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (5549/5549), done.\u001b[K\n",
-      "remote: Total 6710539 (delta 856), reused 2369 (delta 842), pack-reused 6704137\u001b[K\n",
-      "Receiving objects: 100% (6710539/6710539), 2.45 GiB | 3.78 MiB/s, done.\n",
-      "Resolving deltas: 100% (5543452/5543452), done.\n",
-      "Checking out files: 100% (64556/64556), done.\n"
+      "Cloning into '/home/jovyan/host/dev/linux_ckl/repo'...\n",
+      "remote: Enumerating objects: 6999083, done.\u001b[K\n",
+      "remote: Total 6999083 (delta 0), reused 0 (delta 0), pack-reused 6999083\u001b[K\n",
+      "Receiving objects: 100% (6999083/6999083), 2.56 GiB | 3.79 MiB/s, done.\n",
+      "Resolving deltas: 100% (5796259/5796259), done.\n",
+      "Checking out files: 100% (65697/65697), done.\n"
      ]
     }
    ],
@@ -68,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-09T22:29:46.914499Z",
@@ -80,7 +99,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/c/Users/mwhitmore/Desktop/Work/linux/repo\n",
+      "/home/jovyan/host/dev/linux_ckl/repo\n",
+      "2019-11-03 14:07:26 -0800  (HEAD -> master, tag: v5.4-rc6, origin/master, origin/HEAD)\n",
+      "2019-10-27 13:19:19 -0400  (tag: v5.4-rc5)\n",
+      "2019-10-20 15:56:22 -0400  (tag: v5.4-rc4)\n",
+      "2019-10-13 16:37:36 -0700  (tag: v5.4-rc3)\n",
+      "2019-10-06 14:27:30 -0700  (tag: v5.4-rc2)\n",
+      "2019-09-30 10:35:40 -0700  (tag: v5.4-rc1)\n",
+      "2019-09-15 14:19:32 -0700  (tag: v5.3)\n",
+      "2019-09-08 13:33:15 -0700  (tag: v5.3-rc8)\n",
+      "2019-09-02 09:57:40 -0700  (tag: v5.3-rc7)\n",
+      "2019-08-25 12:01:23 -0700  (tag: v5.3-rc6)\n",
+      "2019-08-18 14:31:08 -0700  (tag: v5.3-rc5)\n",
+      "2019-08-11 13:26:41 -0700  (tag: v5.3-rc4)\n",
+      "2019-08-04 18:40:12 -0700  (tag: v5.3-rc3)\n",
+      "2019-07-28 12:47:02 -0700  (tag: v5.3-rc2)\n",
+      "2019-07-21 14:05:38 -0700  (tag: v5.3-rc1)\n",
+      "2019-07-07 15:41:56 -0700  (tag: v5.2)\n",
+      "2019-06-30 11:25:36 +0800  (tag: v5.2-rc7)\n",
+      "2019-06-22 16:01:36 -0700  (tag: v5.2-rc6)\n",
+      "2019-06-16 08:49:45 -1000  (tag: v5.2-rc5)\n",
+      "2019-06-08 20:24:46 -0700  (tag: v5.2-rc4)\n",
+      "2019-06-02 13:55:33 -0700  (tag: v5.2-rc3)\n",
+      "2019-05-26 16:49:19 -0700  (tag: v5.2-rc2)\n",
       "2019-05-19 15:47:09 -0700  (tag: v5.2-rc1)\n",
       "2019-05-05 17:42:58 -0700  (tag: v5.1)\n",
       "2019-04-28 17:04:13 -0700  (tag: v5.1-rc7)\n",
@@ -704,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-09T22:29:46.927644Z",
@@ -714,20 +755,20 @@
    "outputs": [],
    "source": [
     "VERSIONS = {\n",
-    "    'v2.6.12-rc2':'2005-04-16 15:20:36 -0700',\n",
-    "    'v2.6.21' : '2007-04-25 20:08:32 -0700',\n",
+    "#     'v2.6.12-rc2':'2005-04-16 15:20:36 -0700',\n",
+    "#     'v2.6.21' : '2007-04-25 20:08:32 -0700',\n",
     "    'v2.6.31':'2009-09-09 15:13:59 -0700',\n",
     "    'v3.0':'2011-07-21 19:17:23 -0700',    \n",
-    "    'v3.11':'2013-09-02 13:46:10 -0700',        \n",
+    "#     'v3.11':'2013-09-02 13:46:10 -0700',        \n",
     "    'v4.0':'2015-04-12 15:12:50 -0700',            \n",
-    "    'v4.13':'2017-09-03 13:56:17 -0700',\n",
+    "#     'v4.13':'2017-09-03 13:56:17 -0700',\n",
     "    'v5.0':'2019-03-03 15:21:29 -0800'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-09T22:32:25.247593Z",
@@ -738,12 +779,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac6b448e672249148d7d8873f911fd7a",
+       "model_id": "4b4888b5809e4353ba4f57d6025c97e9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=8), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=4), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -759,6 +800,8 @@
    ],
    "source": [
     "for tag in tqdm(VERSIONS):\n",
+    "    if os.path.exists(f\"{SNAPSHOTS_BASE}/{tag}\"):\n",
+    "        continue\n",
     "    !git archive {tag} --format=tar.gz -o {SNAPSHOTS_BASE}/{tag}.tar.gz\n",
     "    os.makedirs(os.path.join(SNAPSHOTS_BASE, tag), exist_ok=True)\n",
     "    !tar -xzf \"{SNAPSHOTS_BASE}/{tag}.tar.gz\" -C \"{SNAPSHOTS_BASE}/{tag}\""
@@ -766,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-09T22:32:25.385273Z",
@@ -778,16 +821,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "v2.6.12-rc2\t    v2.6.31\t    v3.11\t  v4.13\r\n",
-      "v2.6.12-rc2.tar.gz  v2.6.31.tar.gz  v3.11.tar.gz  v4.13.tar.gz\r\n",
-      "v2.6.21\t\t    v3.0\t    v4.0\t  v5.0\r\n",
-      "v2.6.21.tar.gz\t    v3.0.tar.gz     v4.0.tar.gz   v5.0.tar.gz\r\n"
+      "v2.6.31\t\tv3.0\t     v4.0\t  v5.0\r\n",
+      "v2.6.31.tar.gz\tv3.0.tar.gz  v4.0.tar.gz  v5.0.tar.gz\r\n"
      ]
     }
    ],
    "source": [
     "!ls {SNAPSHOTS_BASE}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -807,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
